--- a/src/app/styles/partials/_fonts.scss
+++ b/src/app/styles/partials/_fonts.scss
@@ -20,6 +20,16 @@
   }
 }
 
+@mixin font-Circular($font-family, $font-file) {
+  @font-face {
+    font-family: $font-family;
+    src: url('../fonts/Circular/'+$font-file+'.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: auto;
+  }
+}
+
 /*100 - Thin
 200 - Extra Light (Ultra Light)
 300 - Light
