added search result card view

--- a/src/app/styles/modules/_all.scss
+++ b/src/app/styles/modules/_all.scss
@@ -1,3 +1,6 @@
 // import all modules here and this will be imported in main
+@import "global";
 @import "home";
 @import "navbar";
+@import "tracks";
+@import "loader"
