--- a/src/app/styles/partials/_variables.scss
+++ b/src/app/styles/partials/_variables.scss
@@ -15,14 +15,14 @@ $primaryColor: #1ED760;
 $secondaryColor:#1ED760;
 $primaryColorDark: #616467;
 $primaryColorDarker: #1A1A1A;
-$primaryGreyColor:#919496;
+$primaryGreyColor:#b3b3b3;
 $secondaryDarkColor:#1C1C1C;
-$backgroundColor:#1C273A;
+$backgroundColor:#121212;
 $gutterWidth: 1.25rem;
 $black: #000; //black color for text
 $white: #fff; //black color for text
 $borderColor:#E5E5E5;
-
+$cardBackgroundColor:#282828;
 /*========FONTS============*/
 //highlighter black bg
 $generalFontFamily: CircularBook;
