added artist search added image loading of artitst fixed redirect to home after login

--- a/src/app/styles/modules/_tracks.scss
+++ b/src/app/styles/modules/_tracks.scss
@@ -33,6 +33,8 @@
           border-radius: 50%;
           height: inherit;
           width: inherit;
+          background-position: center;
+          background-size: cover;
         }
       }
 
