--- a/src/app/styles/partials/_variables.scss
+++ b/src/app/styles/partials/_variables.scss
@@ -23,6 +23,7 @@ $black: #000; //black color for text
 $white: #fff; //black color for text
 $borderColor:#E5E5E5;
 $cardBackgroundColor:#282828;
+$playIconBackgorundColor:#1db954;
 /*========FONTS============*/
 //highlighter black bg
 $generalFontFamily: CircularBook;
